--- a/assets/styles.css
+++ b/assets/styles.css
@@ -117,7 +117,7 @@ th {
 }
 
 table.tiny-header tr:first-child {
-  font-size: 8px;
+  font-size: 1rem;
 }
 
 .columns {
@@ -173,13 +173,13 @@ li {
 }
 .all-tabs {
   text-align: center;
-  font-size: 13px;
+  font-size: 1.5rem;
   margin-top: 10px;
 }
 .main-title {
   position: relative;
   color: #3a3a3a;
-  font-size: 40px !important;
+  font-size: 3rem !important;
   width: 80%;
   border-left: 20px solid #157e98;
   background: #ffffff;
@@ -298,7 +298,7 @@ a:active {
   }
   #learn-more-button {
     line-height: 0;
-    font-size: 10px;
+    font-size: 1rem;
     height: 30px;
     padding: 0 10px;
   }
