--- a/assets/base.css
+++ b/assets/base.css
@@ -1,14 +1,14 @@
 /* original style sheet */
 
-body {
+/* body {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
   background-color: #fafafa;
-  font-size: 1.7rem;
+  font-size: 1.6em;
   line-height: 1.3;
-}
+} */
 * {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -122,14 +122,14 @@ table.reversed tr:nth-child(even) {
 }
 
 table {
-  font-size: 1.4rem;
+  /* font-size: 1em; */
   border-spacing: 0;
   border-collapse: collapse;
 }
 
-table.tiny-header tr:first-child {
-  font-size: 10px;
-}
+/* table.tiny-header tr:first-child {
+  font-size: 1em;
+} */
 
 /* .columns{ margin-left: 0 !important; } */
 
@@ -147,14 +147,14 @@ h5,
 h6 {
   margin: 0;
 }
-
+/* 
 h6 {
-  font-size: 1.425rem;
-}
+  font-size: 1.425em;
+} */
 
-h6.tiny-header {
-  font-size: 10px;
-}
+/* h6.tiny-header {
+  font-size: 1em;
+} */
 
 li {
   padding-left: 10px;
@@ -183,7 +183,7 @@ a {
 .no-page {
   text-align: center;
   margin-top: 100px;
-  font-size: 22px;
+  /* font-size: 2.5em; */
   font-weight: bold;
 }
 
