--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,15 +1,22 @@
+/* NOTE
+  html is set to 62.5% so that all the REM measurements throughout Skeleton
+  are based on 10px sizing. So basically 1.5rem = 15px :) */
+html {
+  font-size: 62.5%;
+}
 body {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
   background-color: #fafafa;
-  font-size: 1.1rem;
-  line-height: 1.3;
+  font-size: 1.6em;
+  font-family: "Lato", sans-serif;
+  line-height: 1.7;
 }
 * {
-  /* box-sizing: border-box; */
-  /* -moz-box-sizing: border-box; */
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 .page {
   position: relative;
@@ -106,7 +113,7 @@ table.reversed tr:nth-child(even) {
 }
 
 table {
-  font-size: 1rem;
+  font-size: 1em;
   border-spacing: 0;
   border-collapse: collapse;
 }
@@ -117,7 +124,7 @@ th {
 }
 
 table.tiny-header tr:first-child {
-  font-size: 1rem;
+  font-size: 1em;
 }
 
 .columns {
@@ -155,8 +162,8 @@ li {
   position: relative;
   /* height: 15%; */
   padding: 30px;
-  margin-bottom: 25px;
-  border-radius: 10px;
+  margin-bottom: 30px;
+  border-radius: 30px;
   background: #157e98;
   color: #ffffff;
 }
