--- a/assets/styles.css
+++ b/assets/styles.css
@@ -13,6 +13,7 @@ body {
   font-size: 1.6em;
   font-family: "Lato", sans-serif;
   line-height: 1.7;
+  
 }
 * {
   box-sizing: border-box;
@@ -90,10 +91,6 @@ p.padded {
   color: #8496b8;
 }
 
-table {
-  width: 100%;
-}
-
 td {
   padding: 2px 0px;
 }
@@ -113,14 +110,17 @@ table.reversed tr:nth-child(even) {
 }
 
 table {
-  font-size: 1em;
+  width: 90%;
+  font-size: 0.8em;
   border-spacing: 0;
   border-collapse: collapse;
+
 }
-td,
-th {
+th, td {
   border: 0px solid #ddd;
+  text-align: left;
   padding: 8px;
+  /* border-bottom: 1px solid #ddd; */
 }
 
 table.tiny-header tr:first-child {
