--- a/assets/styles.css
+++ b/assets/styles.css
@@ -297,7 +297,15 @@ a:active {
   padding-left: 15px;
   padding-right: 15px;
   text-transform: none;
-  margin: 25px 25px;
+  margin: 50px 80px 0px;
+}
+
+#learn-more-button-2 {
+  float: right;
+  padding-left: 15px;
+  padding-right: 15px;
+  text-transform: none;
+  margin: 15px 80px 0px;
 }
 
 /* for screens smaller than 768px */
@@ -324,6 +332,12 @@ a:active {
     width: auto;
   }
   #learn-more-button {
+    line-height: 0;
+    font-size: 1rem;
+    height: 30px;
+    padding: 0 10px;
+  }
+  #learn-more-button-2 {
     line-height: 0;
     font-size: 1rem;
     height: 30px;
